# python_mongo

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml  text.csv
.github/workflows/: docker-build.yml
mongodb_pandas_project/: backup_script.py  main.py  storage.py
mongodb_pandas_project/filters/: case_filter.py  company_filter.py  user_filter.py
