[tool.poetry]
name = "mongodb-pandas-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
pymongo = "3.13.0"
python-dotenv = "^1.0.1"
azure-storage-blob = "^12.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
